// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> should adopt the "backgroundColor" property 1`] = `
<div
  className="Wrapper-ThVjl elUiXL"
/>
`;

exports[`<Wrapper /> should render and match the snapshot 1`] = `
<div
  className="Wrapper-ThVjl fbbdTc"
/>
`;
